--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "nodecg-vue-ts-template",
+  "name": "mysrtafes2021-layouts",
   "version": "1.0.0",
-  "description": "Template for NodeCG bundles that use Vue.js and TypeScript.",
-  "homepage": "https://github.com/zoton2/nodecg-vue-ts-template#readme",
+  "description": "The on-stream layouts for Mystery Dungeon RTA FES 2",
+  "homepage": "https://oengus.io/marathon/mysrtafes2",
   "bugs": {
-    "url": "https://github.com/zoton2/nodecg-vue-ts-template/issues"
+    "url": "https://github.com/yagamuu/mysrtafes2021-layouts/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/zoton2/nodecg-vue-ts-template.git"
+    "url": "git+https://github.com/yagamuu/mysrtafes2021-layouts.git"
   },
   "license": "MIT",
-  "author": "zoton2",
+  "author": "yagamuu",
   "scripts": {
     "autofix": "run-s autofix:*",
     "autofix:browser": "eslint --fix --ext .ts,.vue src/dashboard && eslint --fix --ext .ts,.vue src/graphics && eslint --fix --ext .ts src/browser_shared",
@@ -81,13 +81,6 @@
   },
   "nodecg": {
     "compatibleRange": "^1.7.1",
-    "dashboardPanels": [
-      {
-        "name": "example",
-        "title": "Example",
-        "file": "example.html"
-      }
-    ],
     "graphics": [
       {
         "file": "example.html",
