--- a/package.json
+++ b/package.json
@@ -86,6 +86,11 @@
         "file": "example.html",
         "width": 1920,
         "height": 1080
+      },
+      {
+        "file": "SD_1.html",
+        "width": 1920,
+        "height": 1080
       }
     ]
   }
