[WIP] feat: DS_1 game layout

--- a/package.json
+++ b/package.json
@@ -91,6 +91,11 @@
         "file": "HD_1.html",
         "width": 1920,
         "height": 1080
+      },
+      {
+        "file": "DS_1.html",
+        "width": 1920,
+        "height": 1080
       }
     ]
   }
