--- a/package.json
+++ b/package.json
@@ -93,6 +93,11 @@
         "height": 1080
       },
       {
+        "file": "HD_2.html",
+        "width": 1920,
+        "height": 1080
+      },
+      {
         "file": "DS_1.html",
         "width": 1920,
         "height": 1080
