[WIP] Add setup layout

--- a/package.json
+++ b/package.json
@@ -101,6 +101,11 @@
         "file": "DS_1.html",
         "width": 1920,
         "height": 1080
+      },
+      {
+        "file": "Setup.html",
+        "width": 1920,
+        "height": 1080
       }
     ]
   }
