feat: Add HD3 layout

--- a/package.json
+++ b/package.json
@@ -98,6 +98,11 @@
         "height": 1080
       },
       {
+        "file": "HD_3.html",
+        "width": 1920,
+        "height": 1080
+      },
+      {
         "file": "DS_1.html",
         "width": 1920,
         "height": 1080
