feat: Add SD3 layout and fix name align

--- a/package.json
+++ b/package.json
@@ -88,6 +88,11 @@
         "height": 1080
       },
       {
+        "file": "SD_3.html",
+        "width": 1920,
+        "height": 1080
+      },
+      {
         "file": "SD_3_pickup.html",
         "width": 1920,
         "height": 1080
